Modified CSS to fix scalability

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 @import url(backgrounds.css);
 @import url(section_papa.css);
 @import url(section_join.css);
+@import url(section_equality.css);
 /* 
  *   Basics 
 */
