--- a/css/section_join.css
+++ b/css/section_join.css
@@ -8,7 +8,7 @@
 
 section:nth-of-type(2) {
     width: 100vw;
-    height: 50vh;
+    height: 100vw;
     max-width: 100%;
     overflow: hidden;
 }
