--- a/css/section_papa.css
+++ b/css/section_papa.css
@@ -13,6 +13,7 @@ section:nth-of-type(1) {
     grid-template-columns: 1fr;
     grid-template-rows: 50vh 50vh;
     grid-template-areas: "papa" "header";
+    overflow: hidden;
 }
 
 section:nth-of-type(1) img {
@@ -68,13 +69,17 @@ section:nth-of-type(1) img.banner {
     section:nth-of-type(1) img:not(.background):not(.banner) {
         content: url(../img/stalin_pointing_wide.png);
     }
+    section:nth-of-type(1) img.banner {
+        width: auto;
+        height: 50vh;
+    }
 }
 
 /* section Presentation */
 
 section:nth-of-type(1) h1 {
     text-transform: uppercase;
-    font-size: 3rem;
+    font-size: 6.5vh;
     color: #ff0000;
     -webkit-text-stroke-width: 0.05rem;
     -webkit-text-stroke-color: black;
@@ -82,9 +87,9 @@ section:nth-of-type(1) h1 {
 
 section:nth-of-type(1) h2 {
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 10vh;
     color: #ff0000;
-    -webkit-text-stroke-width: 0.05rem;
+    -webkit-text-stroke-width: 0.05vh;
     -webkit-text-stroke-color: #000000;
 }
 
