--- a/css/section_join.css
+++ b/css/section_join.css
@@ -8,8 +8,9 @@
 
 section:nth-of-type(2) {
     width: 100vw;
-    height: 100vw;
+    height: fit-content;
     max-width: 100%;
+    padding: 3vh 0;
     overflow: hidden;
 }
 
@@ -22,6 +23,7 @@ section:nth-of-type(2) h1 {
 
 section:nth-of-type(2) a {
     display: block;
+    box-sizing: initial;
     width: 7rem;
     margin: 0 auto;
     padding: 1rem 3rem;
@@ -36,6 +38,10 @@ section:nth-of-type(2) a {
     transition: 200ms;
 }
 
+section:nth-of-type(2) a:hover {
+    box-shadow: 3px 8px 8px #00000044;
+}
+
 section:nth-of-type(2) a:active {
     box-shadow: 3px 12px 12px #00000044;
 }
@@ -44,7 +50,7 @@ section:nth-of-type(2) h1 {
     background-color: #d10003;
     color: #fdd008;
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 3rem;
     -webkit-text-stroke-width: 0.05rem;
     -webkit-text-stroke-color: #000000;
 }
