--- a/css/section_papa.css
+++ b/css/section_papa.css
@@ -44,8 +44,8 @@ section:nth-of-type(1) h2 {
 
 section:nth-of-type(1) hr {
     grid-area: header;
-    width: 2rem;
-    height: 0.1rem;
+    width: 6rem;
+    height: 0.4rem;
     margin-top: 3rem;
 }
 
@@ -81,7 +81,7 @@ section:nth-of-type(1) h1 {
     text-transform: uppercase;
     font-size: 6.5vh;
     color: #ff0000;
-    -webkit-text-stroke-width: 0.05rem;
+    -webkit-text-stroke-width: 0.05vh;
     -webkit-text-stroke-color: black;
 }
 
