--- a/css/section_exception.css
+++ b/css/section_exception.css
@@ -20,7 +20,7 @@ section:nth-of-type(4) {
 
 section:nth-of-type(4) div {
     width: 90vw;
-    max-width: 1300px;
+    max-width: 1350px;
     padding: 2vw;
     margin: auto;
 }
@@ -40,7 +40,7 @@ section:nth-of-type(4) ul {
 }
 
 section:nth-of-type(4) li {
-    width: 280px;
+    width: 19rem;
 }
 
 section:nth-of-type(4) img {
@@ -48,6 +48,28 @@ section:nth-of-type(4) img {
     width: 8vh;
     height: 8vh;
     padding: 0 1rem;
+}
+
+@media only screen and (min-width: 900px) {
+    section:nth-of-type(4) div {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr auto 1fr;
+        grid-template-areas: "icon header ." "list list list";
+        justify-items: center;
+    }
+    section:nth-of-type(4) img {
+        grid-area: icon;
+        width: 12vh;
+        height: 12vh;
+        margin: auto;
+    }
+    section:nth-of-type(4) h1 {
+        grid-area: header;
+    }
+    section:nth-of-type(4) ul {
+        grid-area: list;
+    }
 }
 
 /* section Presentation */
