--- a/css/section_papa.css
+++ b/css/section_papa.css
@@ -10,6 +10,7 @@ section:nth-of-type(1) {
     display: grid;
     width: 100vw;
     max-width: 100%;
+    margin: 0 0 10vh 0;
     grid-template-columns: 1fr;
     grid-template-rows: 50vh 50vh;
     grid-template-areas: "papa" "header";
