--- a/public/communism/css/assignment/assignment.css
+++ b/public/communism/css/assignment/assignment.css
@@ -14,13 +14,25 @@
 /* html Presentation */
 html {
     background-color: #eeeeee;
-    font-family: Verdana, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.2rem;
+    color: rgba(0,0,0,.84);
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-display: auto;
+    font-size: 1.3rem;
+    font-weight: 400;
+    letter-spacing: -0.003em;
+    line-height: 1.58;
     width: 100%;
 }
 
 /* img Layout */
 img {
+    display:block;
+    margin: auto auto 20px auto;
+    max-width: 100%;
+}
+
+/* video Layout */
+video {
     display:block;
     margin: auto auto 20px auto;
     max-width: 100%;
@@ -37,6 +49,7 @@ code {
 h1 {
     text-align: center;
     font-family: Montserrat;
+    font-display: auto;
     font-size: 2rem;
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
@@ -112,21 +125,45 @@ article div {
 
 /* h2 inside div inside article Layout */
 article div h3 {
-    margin: 0.3rem;
-    text-align: left;
-    font-family: Montserrat;
-    font-size: 0.8rem;
+    margin: 0.3rem; /* Text margin */
+    text-align: left; /* Align text normally */
+    font-family: Montserrat; /* Set font */
+    font-size: 0.8rem; /* Text size */
 }
 
 /* h2 inside div inside article Presentation */
 article div h3 {
-    color: #8a8a8a;
-    font-weight: lighter;
+    color: #8a8a8a; /* Text color */
+    font-weight: lighter; /* Light text */
 }
 
 /* lastedited Layout */
 h3#lastedited {
-    text-align: right;
+    text-align: right; /* Align right */
+}
+
+/* topButton Presentation */
+#topButton {
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #eeeeee; /* Set a background color */
+    color: black; /* Text color */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); /* Dropshadow */
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1); /* Animate changes */
+}
+  
+/* topButton Layout */
+#topButton {
+    margin: auto; /* Center */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+}
+
+/* topButton hover Presentation */
+#topButton:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); /* Dropshadow */
 }
 
 /* media Selectors */
